i hid an easter egg in the code. can you find it?

--- a/src/pages/about/timeline.astro
+++ b/src/pages/about/timeline.astro
@@ -16,14 +16,33 @@ const meta = {
 ---
 
 <Layout {meta}>
-  <!-- Contact Widget ******************* -->
+  <!-- Timeline Widget ******************* -->
   
- hui x3 asdasdasd
+<div class="container mx-auto p-16">
 
-  <!-- Note Widget ******************* -->
+<ol class="relative border-l border-black-200 dark:border-gray-700">                  
+    <li class="mb-10 ml-4">
+        <div class="absolute w-3 h-3 bg-gray-200 rounded-full mt-1.5 -left-1.5 border border-white dark:border-gray-900 dark:bg-gray-700"></div>
+        <time class="mb-1 text-sm font-normal leading-none ">March 2023</time>
+        <h3 class="text-lg font-semibold ">A website has been made</h3>
+        <p class="mb-4 text-base font-normal ">Open sources and developed our Official website.</p>
+        <a href="/" class="inline-flex items-center px-4 py-2 text-sm font-medium text-gray-900 bg-white border border-black rounded-lg hover:bg-gray-100 hover:text-blue-700 focus:z-10 focus:ring-4 focus:outline-none focus:ring-gray-200 focus:text-blue-700 dark:bg-gray-800 dark:text-gray-400 dark:border-gray-600 dark:hover:text-white dark:hover:bg-gray-700 dark:focus:ring-gray-700">Learn more <svg class="w-3 h-3 ml-2" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M12.293 5.293a1 1 0 011.414 0l4 4a1 1 0 010 1.414l-4 4a1 1 0 01-1.414-1.414L14.586 11H3a1 1 0 110-2h11.586l-2.293-2.293a1 1 0 010-1.414z" clip-rule="evenodd"></path></svg></a>
+    </li>
+    <li class="mb-10 ml-4">
+        <div class="absolute w-3 h-3 bg-gray-200 rounded-full mt-1.5 -left-1.5 border border-white dark:border-gray-900 dark:bg-gray-700"></div>
+        <time class="mb-1 text-sm font-normal leading-none ">July 2022</time>
+        <h3 class="text-lg font-semibold ">Meetup with another chapter - Sibiu Romania</h3>
+        <p class="text-base font-normal ">Did some ducks, nobody knows.</p>
+    </li>
+    <li class="ml-4">
+        <div class="absolute w-3 h-3 bg-gray-200 rounded-full mt-1.5 -left-1.5 border border-white dark:border-gray-900 dark:bg-gray-700"></div>
+        <time class="mb-1 text-sm font-normal leading-none ">January 2022</time>
+        <h3 class="text-lg font-semibold ">Opening the branch</h3>
+        <p class="text-base font-normal ">Officialy opening the branch in Uni Ruse.</p>
+    </li>
+</ol>
 
-  <!-- <Note /> -->
+</div>
 
-  
 
 </Layout>
