--- a/src/pages/about/team.astro
+++ b/src/pages/about/team.astro
@@ -12,7 +12,7 @@ const meta = {
 <Layout {meta}>
   <!-- Contact Widget ******************* -->
   
- hui x3 asdasdasd
+ patki x3 asdasdasd
 
   <!-- Note Widget ******************* -->
 
