pr is failing but merging anyways, because I am an admin

--- a/src/pages/about/team.astro
+++ b/src/pages/about/team.astro
@@ -10,14 +10,38 @@ const meta = {
 ---
 
 <Layout {meta}>
-  <!-- Contact Widget ******************* -->
-  
- patki x3 asdasdasd
+  <section class="relative w-full">
+    <div class="relative w-full px-8 pt-16 pb-16 ml-auto mr-auto bg-top bg-cover sm:max-w-xl md:max-w-full md:px-24 lg:px-8 lg:py-24 lg:pb-32">
+        <div class="max-w-xl mb-10 ml-auto mr-auto bg-top bg-cover md:mx-auto sm:text-center lg:max-w-2xl md:mb-12">
+          <div class="max-w-2xl mb-6 ml-auto mr-auto  tracking-tight  bg-top bg-cover sm:text-4xl md:mx-auto">
+                <p class="inline max-w-lg  text-3xl font-bold leading-none tracking-tight  sm:text-4xl md:mx-auto">Our Awesome Team</p>
+            </div>
+        </div>
+        <div class="grid gap-10 row-gap-8 ml-auto mr-auto sm:row-gap-10 lg:max-w-screen-lg sm:grid-cols-2 lg:grid-cols-3">
+            
+          <div class="flex items-center">
+                <img src="https://preview.redd.it/qmsar8qwpc951.jpg?width=960&crop=smart&auto=webp&v=enabled&s=66202d4fffd8b11b9232cd8b995f8893a802612d" class="object-cover w-20 h-20 mr-4 rounded-full shadow">
+                <div class="relative">
+                    <p class="text-lg font-bold ">Mike Melcher</p>
+                    <p class="text-sm text-gray-600">CEO & Founder</p>
+                </div>
+            </div>
+            <div class="flex items-center">
+                <img src="https://preview.redd.it/qmsar8qwpc951.jpg?width=960&crop=smart&auto=webp&v=enabled&s=66202d4fffd8b11b9232cd8b995f8893a802612d" class="object-cover w-20 h-20 mr-4 rounded-full shadow">
+                <div class="relative">
+                    <p class="text-lg font-bold ">John Cremson</p>
+                    <p class="text-sm text-gray-600">Co-Founder</p>
+                </div>
+            </div>
+            <div class="flex items-center">
+                <img src="https://preview.redd.it/qmsar8qwpc951.jpg?width=960&crop=smart&auto=webp&v=enabled&s=66202d4fffd8b11b9232cd8b995f8893a802612d" class="object-cover w-20 h-20 mr-4 rounded-full shadow">
+                <div class="relative">
+                    <p class="text-lg font-bold ">Sally Jones</p>
+                    <p class="text-sm text-gray-600">Marketing Manager</p>
+                </div>
+            </div>
 
-  <!-- Note Widget ******************* -->
-
-  <!-- <Note /> -->
-
-  
-
+        </div>
+    </div>
+</section>
 </Layout>
