--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -22,7 +22,7 @@ const meta = {
   <!-- Hero Widget ******************* -->
 
   <Hero
-    image={{ src: import('~/assets/images/hero.png'), alt: 'AstroWind Hero Image' }}
+    image={{ src: import('~/assets/images/hero.png'), alt: 'Hero Image' }}
   >
     <Fragment slot="title">
       IEEE Student Branch of Uni Ruse
