--- a/src/components/Logo.astro
+++ b/src/components/Logo.astro
@@ -1,6 +1,10 @@
 ---
+import { getCanonical, getAsset } from '~/utils/permalinks';
+import { getImage } from '@astrojs/image';
 ---
-
-<span class="self-center ml-2 text-2xl md:text-xl font-bold text-gray-900 whitespace-nowrap dark:text-white">
-  🚀 IEEE Student Branch of Uni Ruse</span
->
+<!-- A temporary solution. The logo is a bit ducked up when it is on mobile.-->
+<span class="flex items-center self-center  text-xl md:text-xl font-bold text-ieeecolor dark:text-white">
+  <img src="/favicon.svg" class="w-6 h-6" alt="IEEE Student Branch of Uni Ruse"> 
+  <div class="m-1">IEEE Student Branch of Uni Ruse</div>
+</span>
+  
