--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -44,7 +44,7 @@ const meta = {
           title: 'Network with other technology professionals',
           description:
             '',
-          icon: 'tabler:brand-tailwind',
+          icon: 'tabler:friends',
         },
         {
           title: 'Establish a professional profile highlighting your accomplishments',
