--- a/src/pages/about/team.astro
+++ b/src/pages/about/team.astro
@@ -22,25 +22,25 @@ const meta = {
           <div class="flex items-center">
                 <img src="https://preview.redd.it/qmsar8qwpc951.jpg?width=960&crop=smart&auto=webp&v=enabled&s=66202d4fffd8b11b9232cd8b995f8893a802612d" class="object-cover w-20 h-20 mr-4 rounded-full shadow">
                 <div class="relative">
-                    <p class="text-lg font-bold ">Mike Melcher</p>
-                    <p class="text-sm text-gray-600">CEO & Founder</p>
+                    <p class="text-lg font-bold ">Gabriel Kanevr</p>
+                    <p class="text-sm text-gray-600">Chair</p>
                 </div>
             </div>
             <div class="flex items-center">
                 <img src="https://preview.redd.it/qmsar8qwpc951.jpg?width=960&crop=smart&auto=webp&v=enabled&s=66202d4fffd8b11b9232cd8b995f8893a802612d" class="object-cover w-20 h-20 mr-4 rounded-full shadow">
                 <div class="relative">
-                    <p class="text-lg font-bold ">John Cremson</p>
-                    <p class="text-sm text-gray-600">Co-Founder</p>
+                    <p class="text-lg font-bold ">Martin Nedelchev</p>
+                    <p class="text-sm text-gray-600">Vice-Chair</p>
                 </div>
             </div>
             <div class="flex items-center">
                 <img src="https://preview.redd.it/qmsar8qwpc951.jpg?width=960&crop=smart&auto=webp&v=enabled&s=66202d4fffd8b11b9232cd8b995f8893a802612d" class="object-cover w-20 h-20 mr-4 rounded-full shadow">
                 <div class="relative">
-                    <p class="text-lg font-bold ">Sally Jones</p>
-                    <p class="text-sm text-gray-600">Marketing Manager</p>
+                    <p class="text-lg font-bold ">Metin Ibrqmov</p>
+                    <p class="text-sm text-gray-600">Secretary</p>
                 </div>
             </div>
-
+                More people will be adeed soon.
         </div>
     </div>
 </section>
