--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -77,7 +77,7 @@ const meta = {
 
   <!-- Content Widget **************** -->
 
-  <Content
+  <!-- <Content
     highlight="Inside template"
     title="And what's inside? ..."
     items={[
@@ -107,7 +107,7 @@ const meta = {
       Ne dicta praesent ocurreret has, diam theophrastus at pro. Eos etiam regione ut, persius eripuit quo id. Sit te euismod
       tacimates.
     </Fragment>
-  </Content>
+  </Content> -->
 
   <!-- Features2 Widget ************** -->
 
