--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -26,10 +26,10 @@ const meta = {
         <div class="max-w-3xl mx-auto mb-10 md:mb-16">
             <h2 class="mt-1 text-2xl font-bold lg:text-3xl md:mt-2">Need to ask us a question?</h2>
             <p class="max-w-screen-md mx-auto mt-4 md:text-lg md:mt-6">
-                Fill out the form below and we'll do some research on our end and get back to you within 24-48 hours.
+                E-mail us at: <a href="mailto:sb-ieee@uni-ruse.bg" class="text-blue-600 hover:text-blue-500">sb-ieee[at]uni-ruse.bg</a>
             </p>
         </div>
-        <form class="grid max-w-3xl gap-4 mx-auto sm:grid-cols-2">
+        <!-- <form class="grid max-w-3xl gap-4 mx-auto sm:grid-cols-2">
             <div>
                 <label for="first-name" class="inline-block mb-2 text-sm font-medium  sm:text-base">First name</label>
                 <input name="first-name" class="w-full px-3 py-2  transition duration-100 border rounded-md outline-none bg-gray-50 focus:ring ring-blue-300" />
@@ -63,7 +63,7 @@ const meta = {
             <div class="flex items-center justify-between sm:col-span-2">
                 <button class="inline-block px-8 py-3 text-sm font-semibold text-center text-white transition duration-100 bg-blue-600 rounded-md outline-none hover:bg-blue-500 active:bg-blue-700 ring-blue-300 md:text-base">Send Message</button>
             </div>
-        </form>
+        </form> -->
     </div>
 
 
