--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -26,7 +26,7 @@ const meta = {
         <div class="max-w-3xl mx-auto mb-10 md:mb-16">
             <h2 class="mt-1 text-2xl font-bold lg:text-3xl md:mt-2">Need to ask us a question?</h2>
             <p class="max-w-screen-md mx-auto mt-4 md:text-lg md:mt-6">
-                E-mail us at: <a href="mailto:sb-ieee@uni-ruse.bg" class="text-blue-600 hover:text-blue-500">sb-ieee[at]uni-ruse.bg</a>
+                E-mail us at: <a href="mailto:sb.ieee@uni-ruse.bg" class="text-blue-600 hover:text-blue-500">sb.ieee[at]uni-ruse.bg</a>
             </p>
         </div>
         <!-- <form class="grid max-w-3xl gap-4 mx-auto sm:grid-cols-2">
