--- a/src/components/common/MetaTags.astro
+++ b/src/components/common/MetaTags.astro
@@ -94,4 +94,5 @@ const image =
 
 <link rel="shortcut icon" href={getAsset('/favicon.ico')} />
 <link rel="icon" type="image/svg+xml" href={getAsset('/favicon.svg')} />
+<link rel="sitemap" href="/sitemap-index.xml"/>
 <link rel="mask-icon" href={getAsset('/favicon.svg')} color="##0A70A3" />
