Updating part of our FAQ-s

--- a/src/pages/about/faq.astro
+++ b/src/pages/about/faq.astro
@@ -14,41 +14,41 @@ const meta = {
 <Layout {meta}>
 <FAQs
     title="Frequently Asked Questions"
-    subtitle="Duis turpis dui, fringilla mattis sem nec, fringilla euismod neque. Morbi tincidunt lacus nec tortor scelerisque pulvinar."
+    subtitle="If there is something else, just contact us."
     highlight="FAQs"
     items={[
       [
         {
-          question: 'What do I need to start?',
+          question: 'What is IEEE Student Branch?',
           answer:
-            'Space, the final frontier. These are the voyages of the Starship Enterprise. Its five-year mission: to explore strange new worlds. Many say exploration is part of our destiny, but it’s actually our duty to future generations.',
+            'IEEE Student Branch is a student-run organization that operates under the umbrella of the Institute of Electrical and Electronics Engineers (IEEE). Its purpose is to provide resources, support, and opportunities to students who are interested in electrical and computer engineering, computer science, and related fields.',
         },
         {
-          question: 'How to install the Astro + Tailwind CSS template?',
+          question: 'How can I become a member of the IEEE Student Branch?',
           answer:
-            "Well, the way they make shows is, they make one show. That show's called a pilot. Then they show that show to the people who make shows, and on the strength of that one show they decide if they're going to make more shows. Some pilots get picked and become television programs. Some don't, become nothing. She starred in one of the ones that became nothing.",
+            "You can become a member of the IEEE Student Branch by visiting the IEEE website and following the steps to join as a student member. You can then select your us as your affiliation.",
         },
         {
-          question: "What's something that you don't understand?",
+          question: "What are the benefits of being a member of the IEEE Student Branch?",
           answer:
-            "A flower in my garden, a mystery in my panties. Heart attack never stopped old Big Bear. I didn't even know we were calling him Big Bear.",
+            "Being a member of the IEEE Student Branch provides many benefits, including access to networking opportunities, career development resources, technical publications, and discounts on conferences and workshops.",
         },
       ],
       [
         {
-          question: "What's an example of when you changed your mind?",
+          question: "What are the events and activities organized by the IEEE Student Branch?",
           answer:
-            "Michael Knight a young loner on a crusade to champion the cause of the innocent. The helpless. The powerless in a world of criminals who operate above the law. Here he comes Here comes Speed Racer. He's a demon on wheels.",
+            "We organize a variety of events and activities, such as guest lectures, workshops, hackathons, competitions, and social events. These events provide opportunities for members to learn, network, and develop their skills.",
         },
         {
-          question: 'What is something that you would like to try again?',
+          question: 'How can I volunteer for the IEEE Student Branch events and activities?',
           answer:
-            "A business big enough that it could be listed on the NASDAQ goes belly up. Disappears! It ceases to exist without me. No, you clearly don't know who you're talking to, so let me clue you in.",
+            "By contacting us on our Discord group. There we will provide you with the necessary information.",
         },
         {
-          question: 'If you could only ask one question to each person you meet, what would that question be?',
+          question: 'How can I contribute to IEEE as a student member and beyond?',
           answer:
-            "This is not about revenge. This is about justice. A lot of things can change in twelve years, Admiral. Well, that's certainly good to know. About four years. I got tired of hearing how young I looked.",
+            "As a student member of IEEE, you can contribute by volunteering for IEEE events and activities, participating in IEEE technical societies, and submitting research papers and articles to IEEE publications. Beyond graduation, you can continue to contribute to IEEE as a professional member by mentoring students, serving on committees, and contributing to technical publications.",
         },
       ],
     ]}
