--- a/src/pages/about/team.astro
+++ b/src/pages/about/team.astro
@@ -19,7 +19,7 @@ const meta = {
         </div>
         <div class="grid gap-10 row-gap-8 ml-auto mr-auto sm:row-gap-10 lg:max-w-screen-lg sm:grid-cols-2 lg:grid-cols-3">
             
-          <div class="flex items-center">
+            <div class="flex items-center">
                 <img src="https://preview.redd.it/qmsar8qwpc951.jpg?width=960&crop=smart&auto=webp&v=enabled&s=66202d4fffd8b11b9232cd8b995f8893a802612d" class="object-cover w-20 h-20 mr-4 rounded-full shadow">
                 <div class="relative">
                     <p class="text-lg font-bold ">Gabriel Kanevr</p>
@@ -36,11 +36,108 @@ const meta = {
             <div class="flex items-center">
                 <img src="https://preview.redd.it/qmsar8qwpc951.jpg?width=960&crop=smart&auto=webp&v=enabled&s=66202d4fffd8b11b9232cd8b995f8893a802612d" class="object-cover w-20 h-20 mr-4 rounded-full shadow">
                 <div class="relative">
+                    <p class="text-lg font-bold ">Tsvetelina Stefanova</p>
+                    <p class="text-sm text-gray-600">Treasurer</p>
+                </div>
+            </div>
+            <div class="flex items-center">
+                <img src="https://preview.redd.it/qmsar8qwpc951.jpg?width=960&crop=smart&auto=webp&v=enabled&s=66202d4fffd8b11b9232cd8b995f8893a802612d" class="object-cover w-20 h-20 mr-4 rounded-full shadow">
+                <div class="relative">
                     <p class="text-lg font-bold ">Metin Ibrqmov</p>
                     <p class="text-sm text-gray-600">Secretary</p>
                 </div>
             </div>
-                More people will be adeed soon.
+            <div class="flex items-center">
+                <img src="https://preview.redd.it/qmsar8qwpc951.jpg?width=960&crop=smart&auto=webp&v=enabled&s=66202d4fffd8b11b9232cd8b995f8893a802612d" class="object-cover w-20 h-20 mr-4 rounded-full shadow">
+                <div class="relative">
+                    <p class="text-lg font-bold ">Atila Pandzhar</p>
+                    <p class="text-sm text-gray-600">Member</p>
+                </div>
+            </div>
+            <div class="flex items-center">
+                <img src="https://preview.redd.it/qmsar8qwpc951.jpg?width=960&crop=smart&auto=webp&v=enabled&s=66202d4fffd8b11b9232cd8b995f8893a802612d" class="object-cover w-20 h-20 mr-4 rounded-full shadow">
+                <div class="relative">
+                    <p class="text-lg font-bold ">Martin Minchev</p>
+                    <p class="text-sm text-gray-600">Member</p>
+                </div>
+            </div>
+            <div class="flex items-center">
+                <img src="https://preview.redd.it/qmsar8qwpc951.jpg?width=960&crop=smart&auto=webp&v=enabled&s=66202d4fffd8b11b9232cd8b995f8893a802612d" class="object-cover w-20 h-20 mr-4 rounded-full shadow">
+                <div class="relative">
+                    <p class="text-lg font-bold ">Dimitar Dimitrov</p>
+                    <p class="text-sm text-gray-600">Member</p>
+                </div>
+            </div>
+            <div class="flex items-center">
+                <img src="https://preview.redd.it/qmsar8qwpc951.jpg?width=960&crop=smart&auto=webp&v=enabled&s=66202d4fffd8b11b9232cd8b995f8893a802612d" class="object-cover w-20 h-20 mr-4 rounded-full shadow">
+                <div class="relative">
+                    <p class="text-lg font-bold ">Denis Sami</p>
+                    <p class="text-sm text-gray-600">Member</p>
+                </div>
+            </div>
+            <div class="flex items-center">
+                <img src="https://preview.redd.it/qmsar8qwpc951.jpg?width=960&crop=smart&auto=webp&v=enabled&s=66202d4fffd8b11b9232cd8b995f8893a802612d" class="object-cover w-20 h-20 mr-4 rounded-full shadow">
+                <div class="relative">
+                    <p class="text-lg font-bold ">Preslav Stoyanov</p>
+                    <p class="text-sm text-gray-600">Member</p>
+                </div>
+            </div>
+            <div class="flex items-center">
+                <img src="https://preview.redd.it/qmsar8qwpc951.jpg?width=960&crop=smart&auto=webp&v=enabled&s=66202d4fffd8b11b9232cd8b995f8893a802612d" class="object-cover w-20 h-20 mr-4 rounded-full shadow">
+                <div class="relative">
+                    <p class="text-lg font-bold ">Deyan Dzhumaliyski</p>
+                    <p class="text-sm text-gray-600">Member</p>
+                </div>
+            </div>
+            <div class="flex items-center">
+                <img src="https://preview.redd.it/qmsar8qwpc951.jpg?width=960&crop=smart&auto=webp&v=enabled&s=66202d4fffd8b11b9232cd8b995f8893a802612d" class="object-cover w-20 h-20 mr-4 rounded-full shadow">
+                <div class="relative">
+                    <p class="text-lg font-bold ">Konstantin Tokov</p>
+                    <p class="text-sm text-gray-600">Member</p>
+                </div>
+            </div>
+            <div class="flex items-center">
+                <img src="https://preview.redd.it/qmsar8qwpc951.jpg?width=960&crop=smart&auto=webp&v=enabled&s=66202d4fffd8b11b9232cd8b995f8893a802612d" class="object-cover w-20 h-20 mr-4 rounded-full shadow">
+                <div class="relative">
+                    <p class="text-lg font-bold ">Aleksandar Ivanov</p>
+                    <p class="text-sm text-gray-600">Member</p>
+                </div>
+            </div>
+            <div class="flex items-center">
+                <img src="https://preview.redd.it/qmsar8qwpc951.jpg?width=960&crop=smart&auto=webp&v=enabled&s=66202d4fffd8b11b9232cd8b995f8893a802612d" class="object-cover w-20 h-20 mr-4 rounded-full shadow">
+                <div class="relative">
+                    <p class="text-lg font-bold ">Atanas Kabakchiev</p>
+                    <p class="text-sm text-gray-600">Member</p>
+                </div>
+            </div>
+            <div class="flex items-center">
+                <img src="https://preview.redd.it/qmsar8qwpc951.jpg?width=960&crop=smart&auto=webp&v=enabled&s=66202d4fffd8b11b9232cd8b995f8893a802612d" class="object-cover w-20 h-20 mr-4 rounded-full shadow">
+                <div class="relative">
+                    <p class="text-lg font-bold ">Reni Kabakchieva</p>
+                    <p class="text-sm text-gray-600">Member</p>
+                </div>
+            </div>
+            <div class="flex items-center">
+                <img src="https://preview.redd.it/qmsar8qwpc951.jpg?width=960&crop=smart&auto=webp&v=enabled&s=66202d4fffd8b11b9232cd8b995f8893a802612d" class="object-cover w-20 h-20 mr-4 rounded-full shadow">
+                <div class="relative">
+                    <p class="text-lg font-bold ">Todor Yordanov</p>
+                    <p class="text-sm text-gray-600">Member</p>
+                </div>
+            </div>
+            <div class="flex items-center">
+                <img src="https://preview.redd.it/qmsar8qwpc951.jpg?width=960&crop=smart&auto=webp&v=enabled&s=66202d4fffd8b11b9232cd8b995f8893a802612d" class="object-cover w-20 h-20 mr-4 rounded-full shadow">
+                <div class="relative">
+                    <p class="text-lg font-bold ">Plamena Dinolova</p>
+                    <p class="text-sm text-gray-600">Member</p>
+                </div>
+            </div>
+            <div class="flex items-center">
+                <img src="https://preview.redd.it/qmsar8qwpc951.jpg?width=960&crop=smart&auto=webp&v=enabled&s=66202d4fffd8b11b9232cd8b995f8893a802612d" class="object-cover w-20 h-20 mr-4 rounded-full shadow">
+                <div class="relative">
+                    <p class="text-lg font-bold ">Teodor Nenov</p>
+                    <p class="text-sm text-gray-600">Member</p>
+                </div>
+            </div>
         </div>
     </div>
 </section>
