--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,7 +1,7 @@
 ---
 import '~/assets/styles/tailwind.css';
 
-import { I18N_CONFIG } from "~/utils/config";
+import { I18N } from "~/utils/config";
 
 import CommonMeta from '~/components/common/CommonMeta.astro';
 import Favicons from '~/components/Favicons.astro';
@@ -12,14 +12,14 @@ import SiteVerification  from "~/components/common/SiteVerification.astro"
 import Analytics  from "~/components/common/Analytics.astro"
 import BasicScripts from '~/components/common/BasicScripts.astro';
 
-import { MetaData as MetaDataType } from '~/types';
+import type { MetaData as MetaDataType } from '~/types';
 
 export interface Props {
   metadata?: MetaDataType;
 }
 
 const { metadata = {} } = Astro.props;
-const { language, textDirection } = I18N_CONFIG;
+const { language, textDirection } = I18N;
 ---
 
 <!DOCTYPE html>
@@ -41,7 +41,7 @@ const { language, textDirection } = I18N_CONFIG;
     <BasicScripts />
 
     <style is:global>
-      Image {
+      img {
         content-visibility: auto;
       }
     </style>
