--- a/src/pages/about/team.astro
+++ b/src/pages/about/team.astro
@@ -1,12 +1,8 @@
 ---
-import { SITE } from '~/config.mjs';
-
 import Layout from '~/layouts/PageLayout.astro';
 
 const meta = {
-  title: SITE.title,
-  description: SITE.description,
-  dontUseTitleTemplate: true,
+  title: 'Team',
 };
 ---
 
@@ -22,7 +18,7 @@ const meta = {
             
             <a href="https://mrgkanev.eu" title="Gabriel Kanev">
                 <div class="flex items-center">
-                    <Image src="/no-avatar.jpg" class="object-cover w-20 h-20 mr-4 rounded-full shadow" alt="A starry night sky.">
+                    <img src="/no-avatar.jpg" class="object-cover w-20 h-20 mr-4 rounded-full shadow" alt="A starry night sky.">
                     <div class="relative">
                         <p class="text-lg font-bold ">Gabriel Kanev</p>
                         <p class="text-sm text-gray-600">Chair</p>
@@ -30,112 +26,112 @@ const meta = {
                 </div>
              </a>
             <div class="flex items-center">
-                <Image src="/no-avatar.jpg" class="object-cover w-20 h-20 mr-4 rounded-full shadow">
+                <img src="/no-avatar.jpg" class="object-cover w-20 h-20 mr-4 rounded-full shadow">
                 <div class="relative">
                     <p class="text-lg font-bold ">Martin Nedelchev</p>
                     <p class="text-sm text-gray-600">Vice-Chair</p>
                 </div>
             </div>
             <div class="flex items-center">
-                <Image src="/no-avatar.jpg" class="object-cover w-20 h-20 mr-4 rounded-full shadow">
+                <img src="/no-avatar.jpg" class="object-cover w-20 h-20 mr-4 rounded-full shadow">
                 <div class="relative">
                     <p class="text-lg font-bold ">Tsvetelina Stefanova</p>
                     <p class="text-sm text-gray-600">Treasurer</p>
                 </div>
             </div>
             <div class="flex items-center">
-                <Image src="/no-avatar.jpg" class="object-cover w-20 h-20 mr-4 rounded-full shadow">
+                <img src="/no-avatar.jpg" class="object-cover w-20 h-20 mr-4 rounded-full shadow">
                 <div class="relative">
                     <p class="text-lg font-bold ">Metin Ibrqmov</p>
                     <p class="text-sm text-gray-600">Secretary</p>
                 </div>
             </div>
             <div class="flex items-center">
-                <Image src="/no-avatar.jpg" class="object-cover w-20 h-20 mr-4 rounded-full shadow">
+                <img src="/no-avatar.jpg" class="object-cover w-20 h-20 mr-4 rounded-full shadow">
                 <div class="relative">
                     <p class="text-lg font-bold ">Atila Pandzhar</p>
                     <p class="text-sm text-gray-600">Member</p>
                 </div>
             </div>
             <div class="flex items-center">
-                <Image src="/no-avatar.jpg" class="object-cover w-20 h-20 mr-4 rounded-full shadow">
+                <img src="/no-avatar.jpg" class="object-cover w-20 h-20 mr-4 rounded-full shadow">
                 <div class="relative">
                     <p class="text-lg font-bold ">Martin Minchev</p>
                     <p class="text-sm text-gray-600">Member</p>
                 </div>
             </div>
             <div class="flex items-center">
-                <Image src="/no-avatar.jpg" class="object-cover w-20 h-20 mr-4 rounded-full shadow">
+                <img src="/no-avatar.jpg" class="object-cover w-20 h-20 mr-4 rounded-full shadow">
                 <div class="relative">
                     <p class="text-lg font-bold ">Dimitar Dimitrov</p>
                     <p class="text-sm text-gray-600">Member</p>
                 </div>
             </div>
             <div class="flex items-center">
-                <Image src="/no-avatar.jpg" class="object-cover w-20 h-20 mr-4 rounded-full shadow">
+                <img src="/no-avatar.jpg" class="object-cover w-20 h-20 mr-4 rounded-full shadow">
                 <div class="relative">
                     <p class="text-lg font-bold ">Denis Sami</p>
                     <p class="text-sm text-gray-600">Member</p>
                 </div>
             </div>
             <div class="flex items-center">
-                <Image src="/no-avatar.jpg" class="object-cover w-20 h-20 mr-4 rounded-full shadow">
+                <img src="/no-avatar.jpg" class="object-cover w-20 h-20 mr-4 rounded-full shadow">
                 <div class="relative">
                     <p class="text-lg font-bold ">Preslav Stoyanov</p>
                     <p class="text-sm text-gray-600">Member</p>
                 </div>
             </div>
             <div class="flex items-center">
-                <Image src="/no-avatar.jpg" class="object-cover w-20 h-20 mr-4 rounded-full shadow">
+                <img src="/no-avatar.jpg" class="object-cover w-20 h-20 mr-4 rounded-full shadow">
                 <div class="relative">
                     <p class="text-lg font-bold ">Deyan Dzhumaliyski</p>
                     <p class="text-sm text-gray-600">Member</p>
                 </div>
             </div>
             <div class="flex items-center">
-                <Image src="/no-avatar.jpg" class="object-cover w-20 h-20 mr-4 rounded-full shadow">
+                <img src="/no-avatar.jpg" class="object-cover w-20 h-20 mr-4 rounded-full shadow">
                 <div class="relative">
                     <p class="text-lg font-bold ">Konstantin Tokov</p>
                     <p class="text-sm text-gray-600">Member</p>
                 </div>
             </div>
             <div class="flex items-center">
-                <Image src="/no-avatar.jpg" class="object-cover w-20 h-20 mr-4 rounded-full shadow">
+                <img src="/no-avatar.jpg" class="object-cover w-20 h-20 mr-4 rounded-full shadow">
                 <div class="relative">
                     <p class="text-lg font-bold ">Aleksandar Ivanov</p>
                     <p class="text-sm text-gray-600">Member</p>
                 </div>
             </div>
             <div class="flex items-center">
-                <Image src="/no-avatar.jpg" class="object-cover w-20 h-20 mr-4 rounded-full shadow">
+                <img src="/no-avatar.jpg" class="object-cover w-20 h-20 mr-4 rounded-full shadow">
                 <div class="relative">
                     <p class="text-lg font-bold ">Atanas Kabakchiev</p>
                     <p class="text-sm text-gray-600">Member</p>
                 </div>
             </div>
             <div class="flex items-center">
-                <Image src="/no-avatar.jpg" class="object-cover w-20 h-20 mr-4 rounded-full shadow">
+                <img src="/no-avatar.jpg" class="object-cover w-20 h-20 mr-4 rounded-full shadow">
                 <div class="relative">
                     <p class="text-lg font-bold ">Reni Kabakchieva</p>
                     <p class="text-sm text-gray-600">Member</p>
                 </div>
             </div>
             <div class="flex items-center">
-                <Image src="/no-avatar.jpg" class="object-cover w-20 h-20 mr-4 rounded-full shadow">
+                <img src="/no-avatar.jpg" class="object-cover w-20 h-20 mr-4 rounded-full shadow">
                 <div class="relative">
                     <p class="text-lg font-bold ">Todor Yordanov</p>
                     <p class="text-sm text-gray-600">Member</p>
                 </div>
             </div>
             <div class="flex items-center">
-                <Image src="/no-avatar.jpg" class="object-cover w-20 h-20 mr-4 rounded-full shadow">
+                <img src="/no-avatar.jpg" class="object-cover w-20 h-20 mr-4 rounded-full shadow">
                 <div class="relative">
                     <p class="text-lg font-bold ">Plamena Dinolova</p>
                     <p class="text-sm text-gray-600">Member</p>
                 </div>
             </div>
             <div class="flex items-center">
-                <Image src="/no-avatar.jpg" class="object-cover w-20 h-20 mr-4 rounded-full shadow">
+                <img src="/no-avatar.jpg" class="object-cover w-20 h-20 mr-4 rounded-full shadow">
                 <div class="relative">
                     <p class="text-lg font-bold ">Teodor Nenov</p>
                     <p class="text-sm text-gray-600">Member</p>
